# tinyfsm

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/api/: CMakeLists.txt
examples/debugging_switch/: CMakeLists.txt  debugging_switch.h  main.cpp
examples/elevator/: CMakeLists.txt
examples/mealy_machine/: CMakeLists.txt  main.cpp  mealy_machine.h
examples/moore_machine/: CMakeLists.txt  main.cpp  moore_machine.h
examples/multiple_switch/: CMakeLists.txt  main.cpp  multiple_switch.h
examples/resetting_switch/: CMakeLists.txt  main.cpp  resetting_switch.h
examples/simple_switch/: CMakeLists.txt  main.cpp  simple_switch.h
include/: tinyfsm.hpp
